[workspace]

members = [
    "applications/tari_dan_app_utilities",
    "applications/tari_dan_wallet_cli",
    "applications/tari_dan_wallet_daemon",
    "applications/tari_indexer",
    "applications/tari_web_extension",
    "applications/tari_signaling_server",
    "applications/tari_validator_node_cli",
    "applications/tari_validator_node",
    "applications/tari_web_extension",
    "clients/base_node_client",
    "clients/validator_node_client",
    "clients/wallet_daemon_client",
    "dan_layer/consensus",
    "dan_layer/consensus_tests",
    "dan_layer/epoch_manager",
    "dan_layer/indexer_lib",
    "dan_layer/p2p",
    "dan_layer/state_store_sqlite",
    "dan_layer/storage_lmdb",
    "dan_layer/storage_sqlite",
    "dan_layer/storage",
    "dan_layer/tari_bor",
    "dan_layer/template_abi",
    "dan_layer/template_builtin",
    "dan_layer/template_lib",
    "dan_layer/template_macros",
    "dan_layer/template_test_tooling",
    "dan_layer/transaction_manifest",
    "dan_layer/transaction",
    "dan_layer/validator_node_rpc",
    "dan_layer/wallet/sdk",
    "dan_layer/wallet/storage_sqlite",
    "integration_tests",

    "utilities/transaction_generator",
    "utilities/transaction_submitter",
]
#
resolver = "2"

# Shutdown when panicking so we can see the error, specifically for the wallet
[profile.release]
panic = 'abort'
# By default, Rust will wrap an integer in release mode instead of throwing the overflow error
# seen in debug mode. Panicking at this time is better than silently using the wrong value.
overflow-checks = true

[patch.crates-io]
# Temporarily lock pgp to commit (master branch at time of writing) because the currently release crate locks zeroize to =1.3
liblmdb-sys = { git = "https://github.com/tari-project/lmdb-rs", tag = "0.7.6-tari.1" }

# Make a copy of this code, uncomment and replace account and my-branch with the name of your fork and the branch you want to temporarily use
#[patch."https://github.com/tari-project/tari.git"]
#minotari_app_grpc = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#minotari_app_grpc = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#minotari_wallet_grpc_client= { git = "https://github.com/account/tari.git", branch = "my-branch" }
#minotari_node_grpc_client = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#tari_common = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#tari_common_types = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#tari_comms = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#tari_comms_rpc_macros = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#tari_core = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#tari_key_manager = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#tari_mmr = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#tari_p2p = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#tari_shutdown = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#tari_storage = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#minotari_wallet_grpc_client = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#tari_script = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#minotari_wallet = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#minotari_console_wallet = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#tari_service_framework = { git = "https://github.com/account/tari.git", branch = "my-branch" }
#tari_comms_dht = { git = "https://github.com/account/tari.git", branch = "my-branch" }

[patch."https://github.com/tari-project/tari.git"]
minotari_app_grpc = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
minotari_app_utilities = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
minotari_wallet_grpc_client = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
minotari_node_grpc_client = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_common = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_common_types = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_comms = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_comms_rpc_macros = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_core = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_key_manager = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_mmr = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_p2p = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_shutdown = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_storage = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_script = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
minotari_wallet = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
minotari_console_wallet = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_service_framework = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_comms_dht = { git = "https://www.github.com/tari-project/tari.git", branch = "feature-dan2" }