[package]
name = "integration_tests"
authors = ["The Tari Development Community"]
description = "The Tari validator node implementation"
repository = "https://github.com/tari-project/tari-dan"
license = "BSD-3-Clause"
version = "0.50.0-pre.0"
edition = "2021"

[dependencies]
minotari_app_grpc = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
minotari_app_utilities = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
minotari_node = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
minotari_node_grpc_client = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_common = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_common_types = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_comms = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_comms_dht = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
minotari_console_wallet = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
minotari_wallet = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_p2p = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_shutdown = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }

tari_crypto = "0.18"
tari_indexer = { path = "../applications/tari_indexer" }
tari_validator_node_cli = { path = "../applications/tari_validator_node_cli" }
tari_dan_common_types = { path = "../dan_layer/common_types" }
tari_dan_engine = { path = "../dan_layer/engine" }
tari_dan_storage = { path = "../dan_layer/storage" }
tari_dan_wallet_daemon = { path = "../applications/tari_dan_wallet_daemon" }
tari_engine_types = { path = "../dan_layer/engine_types" }
tari_indexer_client = { path = "../clients/tari_indexer_client" }
tari_template_builtin = { path = "../dan_layer/template_builtin" }
tari_template_lib = { path = "../dan_layer/template_lib" }
tari_transaction = { path = "../dan_layer/transaction" }
tari_validator_node_client = { path = "../clients/validator_node_client" }
tari_validator_node = { path = "../applications/tari_validator_node" }
tari_wallet_daemon_client = { path = "../clients/wallet_daemon_client" }
tari_base_node_client = { path = "../clients/base_node_client" }
tari_transaction_manifest = { path = "../dan_layer/transaction_manifest" }
tari_dan_wallet_sdk = { path = "../dan_layer/wallet/sdk" }
#tari_consensus = { path = "../../dan_layer/consensus" }

anyhow = "1.0.53"
base64 = "0.21.0"
config = "0.13.0"
cucumber = { version = "0.18.0", features = ["default", "libtest", "output-junit"] }
httpmock = "0.6.8"
indexmap = "1.9.1"
log = { version = "0.4.8", features = ["std"] }
log4rs = { version = "1.1.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
rand = "0.8"
reqwest = "0.11.11"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
time = "0.3.15"
tokio = { version = "1.10", features = ["macros", "time", "sync", "rt-multi-thread"] }
tonic = "0.6.2"

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false # allows Cucumber to print output instead of libtest

[package.metadata.cargo-machete]
ignored = [
    # Want to enable some log4rs features
    "log4rs",
]
