[package]
name = "integration_tests"
description = "The Tari integration tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
minotari_app_grpc = { workspace = true }
minotari_app_utilities = { workspace = true }
minotari_node = { workspace = true }
minotari_node_grpc_client = { workspace = true }
tari_common = { workspace = true }
tari_common_types = { workspace = true }
tari_comms = { workspace = true }
tari_comms_dht = { workspace = true }
minotari_console_wallet = { workspace = true }
minotari_wallet = { workspace = true }
tari_p2p = { workspace = true }
tari_shutdown = { workspace = true }

tari_crypto = { workspace = true }
tari_indexer = { workspace = true }
tari_validator_node_cli = { workspace = true }
tari_dan_common_types = { workspace = true }
tari_dan_engine = { workspace = true }
tari_dan_storage = { workspace = true }
tari_dan_wallet_daemon = { workspace = true}
tari_engine_types = { workspace = true }
tari_indexer_client = { workspace = true }
tari_template_builtin = { workspace = true }
tari_template_lib = { workspace = true }
tari_transaction = { workspace = true }
tari_validator_node_client = { workspace = true }
tari_validator_node = { workspace = true }
tari_wallet_daemon_client = { workspace = true }
tari_base_node_client = { workspace = true }
tari_transaction_manifest = { workspace = true }
tari_dan_wallet_sdk = { workspace = true }
#tari_consensus = { workspace = true }

anyhow = "1.0.53"
base64 = "0.21.0"
config = "0.13.0"
cucumber = { version = "0.18.0", features = [
    "default",
    "libtest",
    "output-junit",
] }
futures = "0.3.29"
httpmock = "0.6.8"
indexmap = "1.9.1"
log = { version = "0.4.8", features = ["std"] }
log4rs = { version = "1.1.1", features = [
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "fixed_window_roller",
] }
rand = "0.8"
reqwest = "0.11.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3.15"
tokio = { version = "1.10", features = [
    "macros",
    "time",
    "sync",
    "rt-multi-thread",
] }
tonic = "0.6.2"

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false   # allows Cucumber to print output instead of libtest

[package.metadata.cargo-machete]
ignored = [
    # Want to enable some log4rs features
    "log4rs",
]
