[package]
name = "integration_tests"
description = "The Tari integration tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_core = { workspace = true, default-features = true }
minotari_app_grpc = { workspace = true }
minotari_app_utilities = { workspace = true }
minotari_node = { workspace = true }
minotari_node_grpc_client = { workspace = true }
tari_common = { workspace = true }
tari_common_types = { workspace = true }
minotari_console_wallet = { workspace = true }
minotari_wallet = { workspace = true }
tari_p2p = { workspace = true }
tari_shutdown = { workspace = true }

tari_crypto = { workspace = true }
tari_indexer = { workspace = true }
tari_validator_node_cli = { workspace = true }
tari_dan_app_utilities = { workspace = true }
tari_dan_common_types = { workspace = true }
tari_dan_engine = { workspace = true }
tari_dan_storage = { workspace = true }
tari_dan_wallet_daemon = { workspace = true}
tari_engine_types = { workspace = true }
tari_indexer_client = { workspace = true }
tari_template_builtin = { workspace = true }
tari_template_lib = { workspace = true }
tari_transaction = { workspace = true }
tari_validator_node_client = { workspace = true }
tari_validator_node = { workspace = true }
tari_wallet_daemon_client = { workspace = true }
tari_base_node_client = { workspace = true }
tari_transaction_manifest = { workspace = true }
#tari_dan_wallet_sdk = { workspace = true }

tari_comms = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_comms_dht = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }

anyhow = { workspace = true }
# if we set this version in the workspace it would break other crates
base64 = "0.21.0"
config = { workspace = true }
cucumber = { workspace = true, features = [
    "default",
    "libtest",
    "output-junit",
] }
httpmock = { workspace = true }
indexmap = { workspace = true }
libp2p = { workspace = true }
log = { workspace = true, features = ["std"] }
log4rs = { workspace = true, features = [
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "fixed_window_roller",
] }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = [
    "default",
    "macros",
    "time",
    "sync",
    "rt-multi-thread",
] }
tonic = { workspace = true }

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false   # allows Cucumber to print output instead of libtest

[package.metadata.cargo-machete]
ignored = [
    # Want to enable some log4rs features
    "log4rs",
]
