[package]
name = "tari_dan_app_grpc"
authors = ["The Tari Development Community"]
description = "This crate is to provide a single source for all cross application grpc files and conversions to and from tari-dan applications"
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "0.50.0-pre.0"
edition = "2018"

[dependencies]
tari_common_types = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_common_types" }
tari_comms = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_comms" }
tari_crypto = { git = "https://github.com/tari-project/tari-crypto.git", tag = "v0.16.6" }

tari_dan_common_types = { path = "../../dan_layer/common_types" }
tari_dan_core = { path = "../../dan_layer/core" }
tari_engine_types = { path = "../../dan_layer/engine_types" }
tari_template_lib = { path = "../../dan_layer/template_lib" }
tari_transaction = { path = "../../dan_layer/transaction" }

anyhow = "1.0.53"
chrono = "0.4.22"
prost = "0.9"
tonic = "0.6.2"

[build-dependencies]
tari_common = { git = "https://github.com/tari-project/tari.git", branch = "development", package = "tari_common", features = ["build"] }
