[package]
name = "tari_dan_app_utilities"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common_types = { workspace = true }
tari_core = { workspace = true, default-features = false, features = [
  "transactions",
] }
tari_crypto = "0.19"
tari_shutdown = { workspace = true }

tari_dan_common_types = { workspace = true }
tari_state_store_sqlite = { workspace = true }
tari_dan_engine = { workspace = true }
tari_dan_storage = { workspace = true }
tari_dan_storage_sqlite = { workspace = true }
tari_engine_types = { workspace = true }
tari_epoch_manager = { workspace = true, features = [
  "base_layer",
] }
tari_base_node_client = { workspace = true }
tari_template_builtin = { workspace = true }
tari_template_lib = { workspace = true }
tari_transaction = { workspace = true }
tari_validator_node_client = { workspace = true }
tari_bor = { workspace = true }
tari_indexer_lib = { workspace = true }

anyhow = "1.0.53"
async-trait = "0.1.74"
bytes = "1"
cacache = "12.0.0"
chrono = "0.4.22"
futures = { version = "^0.3.1" }
log = { version = "0.4.8", features = ["std"] }
mini-moka = "0.10.0"
dashmap = "5.5.0"
std-semaphore = "0.1.0"
prost = "0.9"
reqwest = "0.11.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "^1.0.20"
tokio = { version = "1.10", features = [
  "macros",
  "time",
  "sync",
  "rt-multi-thread",
] }
tokio-stream = { version = "0.1.7", features = ["sync"] }
